Criado página Popup e Options. Falta executar scripts sem dá script no HTML e enviar para SetBadgeText

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -8,9 +8,9 @@
         font-family: 'Roboto';font-size: 22px;
         }
         html {
-        min-height: 150px;
-        min-width: 100px;
-        background: fff;
+        min-height: 5em;
+        min-width: 5em;
+        background: #fff;
         font-family: 'Roboto';
         border-radius: 10px;
         padding: 10px;
@@ -34,18 +34,18 @@
         img {
             padding-bottom: 10px;
         }
+        .poup {
+            width: 250px;
+        }
   </style>
 </head>
 <body>
-    <h1 class="titulo">
-        <img src="favicon.png" width="25px" /><br />
-        HRM Extension<br> Heart Rate Monitor
-    </h1>
-    <p class="slogan">Por Gustavo Kennedy Renkel - www.renkel.com.br</p>
-    <div id="textoStatus"><u>Clique para emparelhar</u> &#x2764;</div>
-      <canvas id="waves"></canvas>
+    <div class="poup">
+        <h1 class="titulo">
+            <img src="favicon.png" width="25px" /><br />
+            HRM Extension<br> Heart Rate Monitor
+        </h1>
+        <p class="slogan">Por Gustavo Kennedy Renkel - www.renkel.com.br</p>
     </div>
-    <script src="sensorFrequencia.js"></script>
-    <script src="app.js"></script>
 </body>
 </html>
