--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="container">
         <h1>💓 HRM Extension<br> Heart Rate Monitor</h1>
         <p>Por <a href="https://blog.renkel.com.br" target="_Blank">Gustavo Kennedy Renkel</a></p>
-      <div id="textoStatus">Conectar o &#x2764;</div>
+      <div id="textoStatus"><u>Clique para emparelhar</u> &#x2764;</div>
       <canvas id="waves"></canvas>
     </div>
     <script src="sensorFrequencia.js"></script>
