Alterado bug no Manifest

--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -26,8 +26,8 @@
       <canvas id="waves"></canvas>
     </div>
 
-    <script type="module" src="sensorFrequencia.js"></script>
-    <script type="module" src="app.js"></script>
+    <script src="sensorFrequencia.js"></script>
+    <script src="app.js"></script>
 
   </body>
 </html>
