Alterado service_worker

--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -28,6 +28,7 @@
 
     <script src="sensorFrequencia.js"></script>
     <script src="app.js"></script>
+    <script src="background.js"></script>
 
   </body>
 </html>
