--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -36,15 +36,23 @@
         .poup {
             width: 250px;
         }
+        .frequencia {
+            color: #e82727; 
+        }
   </style>
 </head>
 <body>
     <div class="poup">
         <h1 class="titulo">
             <img src="favicon.png" width="25px" /><br />
-            HRM Extension<br> Heart Rate Monitor
+            HRM Extension<br> <spa style="color:rgb(82, 82, 82)">Heart Rate Monitor</span>
         </h1>
         <p class="slogan">Por Gustavo Kennedy Renkel - www.renkel.com.br</p>
+        
+        <!--
+            Solicitar os {heartRates} que é mostrado em real time em options.html
+         -->
+        <p class="frequencia">{heartRates} &#x2764;</p>
     </div>
 </body>
 </html>
