Alterado exibição na demo web

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </head>
   <body>
     <div id="container">
-        <h1>💓 HRM Extension<br> Heart Rate Monitor</h1>
+        <img src="favicon.png" width="100px" /><br/>
+        <h1>HRM Extension<br> Heart Rate Monitor</h1>
         <p>Por <a href="https://blog.renkel.com.br" target="_Blank">Gustavo Kennedy Renkel</a></p>
       <div id="textoStatus"><u>Clique para emparelhar</u> &#x2764;</div>
       <canvas id="waves"></canvas>
