--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -19,7 +19,8 @@
   </head>
   <body>
     <div id="container">
-      <h1>💓 HRM Extension<br> Heart Rate Monitor</h1>
+      <img src="favicon.png" width="75px" /><br/>
+      <h1>HRM Extension<br> Heart Rate Monitor</h1>
       <p class="slogan">Por <a href="https://blog.renkel.com.br" target="_Blank">Gustavo Kennedy Renkel</a></p>
       <h2>Configurações:</h2>
       <div id="textoStatus"><u>Clique para emparelhar</u> &#x2764;</div>
