--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -23,7 +23,8 @@
       <h1>HRM Extension<br> Heart Rate Monitor</h1>
       <p class="slogan">Por <a href="https://blog.renkel.com.br" target="_Blank">Gustavo Kennedy Renkel</a></p>
       <h2>Configurações:</h2>
-      <p> Alerta para limite de BPM: <input type="text" id="alerta" placeholder="Ex. 180"></input><input type="submit" value="Salvar"></p>
+      <p> Alerta para limite de BPM: <br/>
+        <input type="text" id="alerta" placeholder="Ex. 180"></input><input type="submit" value="Salvar"></p>
       <div id="textoStatus"><u>Clique para emparelhar</u> &#x2764;</div>
       <canvas id="waves"></canvas>
     </div>
