--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -16,6 +16,13 @@
     <meta name="author" content="Gustavo Kennedy Renkel">
     <link rel="stylesheet" href="estilo.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-blue.min.css" />
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <!-- Material Design Lite -->
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <!-- Material Design icon font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <div id="container">
@@ -23,8 +30,18 @@
       <h1>HRM Extension<br> Heart Rate Monitor</h1>
       <p class="slogan">Por <a href="https://blog.renkel.com.br" target="_Blank">Gustavo Kennedy Renkel</a></p>
       <h2>Configurações:</h2>
-      <p> Alerta para limite de BPM: <br/>
-        <input type="text" id="alerta" placeholder="Ex. 180"></input><input type="submit" value="Salvar"></p>
+
+      <form action="#">
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="sample3">
+            <label class="mdl-textfield__label" for="sample3">Insira valor de alerta do BPM</label>
+          </div>
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+            Salvar
+          </button>
+      </form>
+      <br>
+        
       <div id="textoStatus"><u>Clique para emparelhar</u> &#x2764;</div>
       <canvas id="waves"></canvas>
     </div>
